--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base_hotel.html' %} {% load static %} {% block content %}
 
 <div>
-	<h1>Hello from Home</h1>
+	<h1>It's guide deploy Django app to Heroku</h1>
 	{% for i in users %}
 	<p>{{i.username}}</p>
 	{%endfor %}
